[package]
name = "rhp"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "parser",
    "dom",
    "marsec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "parser" }
dom = { path = "dom" }
marsec = { path = "marsec" }


